# python-mcp-template

McpServerTemplate/: pyproject.toml
McpServerTemplate/src/McpServerTemplate/: __init__.py  open_platform_server.py
McpServerTemplate/src/tests/: test_hello.py
